--- a/culturefeed_agenda/translations/culturefeed_agenda.nl.po
+++ b/culturefeed_agenda/translations/culturefeed_agenda.nl.po
@@ -177,8 +177,11 @@ msgid "Search"
 msgstr "Zoeken"
 
 #: includes/blocks.inc:349
-msgid "Program"
+msgid "Program schedule"
 msgstr "Programmatie"
+
+msgid "Show program schedule"
+msgstr "Toon programmatie"
 
 #: includes/helpers.inc:295;362 lib/Drupal/AgendaSearchPage.php:88
 msgid "Home"
