--- a/culturefeed_agenda/translations/culturefeed_agenda.nl.po
+++ b/culturefeed_agenda/translations/culturefeed_agenda.nl.po
@@ -109,8 +109,8 @@ msgid "Extra filter query for the result set"
 msgstr "Verfijn je zoekopdracht"
 
 #: culturefeed_agenda.module:205
-msgid "Make sure this is a correct solr query. Example title=mytitle"
-msgstr "Zorg ervoor dat de solr query juist is. Bijvoorbeeld title=mytitle"
+msgid "Make sure this is a correct solr query. Example title:mytitle"
+msgstr "Zorg ervoor dat de solr query juist is. Bijvoorbeeld title:mytitle"
 
 #: culturefeed_agenda.module:209
 msgid "Sort field"
