--- a/culturefeed_ui/translations/culturefeed_ui.de.po
+++ b/culturefeed_ui/translations/culturefeed_ui.de.po
@@ -621,12 +621,12 @@ msgid "Culturefeed ui: something for you?"
 msgstr ""
 
 #: culturefeed_ui.module:411
-msgid "My account"
-msgstr "Mein Konto"
+msgid "My profile"
+msgstr "Mein Profil"
 
 #: culturefeed_ui.module:413
-msgid "How other users will see your account"
-msgstr "Wie andere Benutzer sehen, wird Ihr Konto"
+msgid "How other users will see your profile"
+msgstr "Wie andere Benutzer sehen, wird Ihr Profil"
 
 #: culturefeed_ui.module:419
 msgid "Change name, address, profile picture, …"
