--- a/culturefeed_agenda/translations/culturefeed_agenda.nl.po
+++ b/culturefeed_agenda/translations/culturefeed_agenda.nl.po
@@ -381,3 +381,19 @@ msgstr "Adres: @location"
 #: theme/theme.inc
 msgid "Phone number: @number"
 msgstr "Telefoon: @number"
+
+#: lib/Drupal/AgendaSearchPage.php
+msgid "A summary of all events and productions"
+msgstr "Alle activiteiten en uitstappen"
+
+#: lib/Drupal/AgendaSearchPage.php
+msgid " in @region"
+msgstr " in @region"
+
+#: lib/Drupal/AgendaSearchPage.php
+msgid " of the type @type"
+msgstr " van het type @type"
+
+#: lib/Drupal/AgendaSearchPage.php
+msgid " with theme @theme"
+msgstr " (@theme)"
